@@ -21,46 +21,44 @@ using System.Windows.Data;
 
 namespace GraphX.Controls
 {
-
-
-  public class VisibilityToBoolConverter : IValueConverter
-  {
-    #region Inverted Property
-
-    public bool Inverted { get; set; }
-
-      #endregion
-
-    #region Not Property
-
-    public bool Not { get; set; }
-
-      #endregion
-
-    public object Convert( object value, Type targetType, object parameter, CultureInfo culture )
+    public class VisibilityToBoolConverter : IValueConverter
     {
-      return Inverted ? BoolToVisibility( value ) : VisibilityToBool( value );
+        #region Inverted Property
+
+        public bool Inverted { get; set; }
+
+        #endregion
+
+        #region Not Property
+
+        public bool Not { get; set; }
+
+        #endregion
+
+        public object Convert(object value, Type targetType, object parameter, CultureInfo culture)
+        {
+            return Inverted ? BoolToVisibility(value) : VisibilityToBool(value);
+        }
+
+        public object ConvertBack(object value, Type targetType, object parameter, CultureInfo culture)
+        {
+            return Inverted ? VisibilityToBool(value) : BoolToVisibility(value);
+        }
+
+        private object VisibilityToBool(object value)
+        {
+            if (!(value is Visibility))
+                throw new InvalidOperationException("SuppliedValueWasNotVisibility");
+
+            return (((Visibility) value) == Visibility.Visible) ^ Not;
+        }
+
+        private object BoolToVisibility(object value)
+        {
+            if (!(value is bool))
+                throw new InvalidOperationException("SuppliedValueWasNotBool");
+
+            return ((bool) value ^ Not) ? Visibility.Visible : Visibility.Collapsed;
+        }
     }
-
-    public object ConvertBack( object value, Type targetType, object parameter, CultureInfo culture )
-    {
-      return Inverted ? VisibilityToBool( value ) : BoolToVisibility( value );
-    }
-
-    private object VisibilityToBool( object value )
-    {
-      if( !( value is Visibility ) )
-        throw new InvalidOperationException( "SuppliedValueWasNotVisibility" );
-
-      return ( ( ( Visibility )value ) == Visibility.Visible ) ^ Not;
-    }
-
-    private object BoolToVisibility( object value )
-    {
-      if( !( value is bool ) )
-        throw new InvalidOperationException( "SuppliedValueWasNotBool" );
-
-      return ( ( bool )value ^ Not ) ? Visibility.Visible : Visibility.Collapsed;
-    }
-  }
 }
